[package]
name = "smoke-test"
version = "0.1.0"
edition = "2021"
description = "A simple ECHO server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.0.10", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21", features = ["full"] }
