[package]
name = "mob-in-the-middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.17", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.9.1"
fancy-regex = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }
