[package]
name = "insecure-sockets-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
hex-literal = "0.4.1"
log = "0.4.20"
pin-project = "1.1.3"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
